--- a/app/src/styles/Panel.css
+++ b/app/src/styles/Panel.css
@@ -2,10 +2,10 @@
   background-color: rgb(212, 238, 247);
   border-radius: 15px;
   padding: 20px;
-  width: 60%;
+  width: 92%;
   max-width: 800px;
   box-sizing: border-box;
-  margin: 0 auto
+  margin: 10px auto
 }
 
 .panel-container {
