--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,29 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
 .app {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   text-align: center;
+  box-sizing: border-box;
+}
+
+.page-header {
+  box-sizing: border-box;
+  text-align: center;
+  flex: 1;
+}
+
+.page-footer {
+  background-color: rgb(87, 13, 87);;
+  color: white;
+  padding: 2px 0;
+  text-align: center;
+  width: 100%;
+  bottom: 0;
 }
