--- a/src/styles/QueryContainer.css
+++ b/src/styles/QueryContainer.css
@@ -3,7 +3,15 @@
   padding: 0px;
   width: 92%;
   max-width: 800px;
-  box-sizing: border-box; 
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  flex: 1;
+}
+
+.results-container {
+  width: 100%;
 }
 
 .search-bar {
