--- a/src/styles/QueryContainer.css
+++ b/src/styles/QueryContainer.css
@@ -8,6 +8,7 @@
   align-items: center;
   flex-direction: column;
   flex: 1;
+  z-index: 1;
 }
 
 .results-container {
@@ -34,6 +35,8 @@
   background-color: rgb(244, 244, 244);
   box-sizing: border-box;
   font-style: normal;
+  font-size: 16px;
+  font-family: monospace;
   text-align: left;
   margin: 0;
   padding: 6px;
