--- a/src/styles/InfoPanel.css
+++ b/src/styles/InfoPanel.css
@@ -3,7 +3,8 @@
   border-radius: 10px;
   padding: 0px;
   box-sizing: border-box;
-  margin: 10px auto
+  margin: 10px auto;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5);
 }
 
 .info-panel-header {
