--- a/src/styles/QueryContainer.css
+++ b/src/styles/QueryContainer.css
@@ -24,7 +24,7 @@
   padding: 0 10px; /* Remove vertical padding, keep horizontal padding */
   display: flex; /* Enable Flexbox */
   align-items: center; /* vertically centered items */
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5), 0px 0px 15px rgba(0, 0, 0, 0.2);;
 }
 
 .search-form {
