--- a/src/styles/Background.css
+++ b/src/styles/Background.css
@@ -1,15 +1,18 @@
+:root {
+  --angle: 240deg;
+  --delay: 0s;
+}
+
 @keyframes textMove {
   0% {
-    transform: translateZ(1000px) scale(10);
-    opacity: 0;
-  }
-  50% {
-    transform: translateZ(0px) scale(3);
-    opacity: 1;
+    transform: translateX(0px) translateY(0px) translateZ(-1000px) scale(0.1);
+    opacity: 0.1;
+    filter: blur(3px);
   }
   100% {
-    transform: translateZ(-1000px) scale(0.1);
-    opacity: 0;
+    transform: translateX(calc(2000px * cos(var(--angle)))) translateY(calc(2000px * sin(var(--angle)))) translateZ(1000px) scale(4);
+    opacity: 0.9;
+    filter: blur(0px);
   }
 }
 
@@ -22,6 +25,6 @@
   justify-content: center;
   font-size: 5rem;
   color: rgba(255, 255, 255, 0.8);
-  animation: textMove 3s linear infinite reverse;
+  animation: textMove 20s ease-out var(--delay) infinite;
   perspective: 1000px;
 }
