--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,6 +12,7 @@ html, body {
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
   box-sizing: border-box;
+  z-index: 0;
 }
 
 .page-header {
@@ -23,6 +24,7 @@ html, body {
   text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5);
   color: white;
   flex: 1;
+  z-index: 3;
 }
 
 .page-footer {
@@ -32,4 +34,5 @@ html, body {
   text-align: center;
   width: 100%;
   bottom: 0;
+  z-index: 3;
 }
