--- a/src/styles/QueryContainer.css
+++ b/src/styles/QueryContainer.css
@@ -36,7 +36,7 @@
   background-color: rgb(244, 244, 244);
   box-sizing: border-box;
   font-style: normal;
-  font-size: 16px;
+  font-size: 18px;
   font-family: monospace;
   text-align: left;
   margin: 0;
@@ -59,4 +59,5 @@
   border-radius: 8px;
   border:rgb(171, 27, 171);
   cursor: pointer;
+  font-weight: bold;
 }
