--- a/src/styles/InfoPanel.css
+++ b/src/styles/InfoPanel.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   margin: 10px auto;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5), 0px 0px 15px rgba(0, 0, 0, 0.2);
+  visibility: hidden;
 }
 
 .info-panel-header {
