--- a/src/styles/InfoPanel.css
+++ b/src/styles/InfoPanel.css
@@ -26,4 +26,11 @@
   padding-top: 5px;
   padding-bottom: 15px;
   box-sizing: border-box; /* ensures that the width includes padding and borders */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.info-panel-sequent-calculus-contents {
+  width: max-content;
 }
