--- a/src/styles/InfoPanel.css
+++ b/src/styles/InfoPanel.css
@@ -1,9 +1,12 @@
+p {
+  margin: 0px;
+}
+
 .info-panel {
   background-color: rgb(244, 244, 244);
   border-radius: 10px;
-  padding: 0px;
   box-sizing: border-box;
-  margin: 10px auto;
+  margin: 10px auto; /* space between info panels */
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5), 0px 0px 15px rgba(0, 0, 0, 0.2);
   /* visibility: hidden; */
 }
@@ -23,14 +26,19 @@
 }
 
 .info-panel-contents {
-  padding-top: 5px;
-  padding-bottom: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   box-sizing: border-box; /* ensures that the width includes padding and borders */
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.info-panel-sequent-calculus-contents {
-  width: max-content;
+
+.info-panel-sequent-calculus-contents { /* TODO: delete this section? */
+  box-sizing: border-box; /* ensures that the width includes padding and borders */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
